--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title= title
+    script(src='/javascripts/jquery.js')
+    script(src='/javascripts/main.js')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     include ./partials/header
