Styled the Add and Remove buttons.

--- a/views/less/style.less
+++ b/views/less/style.less
@@ -38,3 +38,11 @@ a {
 .content {
   .make-md-column(6);
 }
+
+.addToTeam,
+.removeFromTeam {
+  .btn;
+  .btn-xs;
+  .btn-primary;
+  margin: 0 5px;
+}
