Changed public stylesheets directory to public/css.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
     title= title
     script(src='/lib/jquery.js')
     script(src='/js/main.js')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/css/style.css')
   body
     include ./partials/header
     include ./partials/side-a
