--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,13 @@
 doctype html
-html
+html(ng-app="CSApp")
   head
     title= title
-    script(src='/lib/jquery.js')
-    script(src='/js/main.js')
+    //-script(src='/lib/jquery.js')
+    script(src='/lib/angular.js')
+    script(src='/lib/angular-ui-router.js')
+    //-script(src='/js/main.js')
+    script(src='/js/app.js')
+    script(src='/js/test.js')
     link(rel='stylesheet', href='/css/style.css')
   body
     include ./partials/header
