--- a/views/index.jade
+++ b/views/index.jade
@@ -3,11 +3,11 @@ extends layout
 block content
   ul
     li
-      a(ui-sref="home") Home
+      a(ui-sref="anon.home") Home
     li
-      a(ui-sref="login") Login
+      a(ui-sref="anon.login") Login
     li
-      a(ui-sref="register") Register
+      a(ui-sref="anon.register") Register
 
   p= username
   div(ui-view)
