--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,10 +4,14 @@ html(ng-app="CSApp")
     title= title
     //-script(src='/lib/jquery.js')
     script(src='/lib/angular.js')
+    script(src='/lib/angular-cookies.js')
     script(src='/lib/angular-ui-router.js')
+    script(src='/js/routingConfig.js')
     //-script(src='/js/main.js')
     script(src='/js/app.js')
-    script(src='/js/test.js')
+    script(src='/js/controllers.js')
+    script(src='/js/services.js')
+
     link(rel='stylesheet', href='/css/style.css')
   body
     include ./partials/header
