Removed gulp-jade. Added restangular.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,10 @@ html(ng-app="CSApp")
     script(src='/lib/angular.js')
     script(src='/lib/angular-cookies.js')
     script(src='/lib/angular-ui-router.js')
+
+    script(src='/lib/lodash.js')
+    script(src='/lib/restangular.js')
+
     script(src='/js/routingConfig.js')
     //-script(src='/js/main.js')
     script(src='/js/app.js')
