--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,11 +14,12 @@ html(ng-app="CSApp")
     //-script(src='/js/main.js')
     script(src='/js/app.js')
     script(src='/js/controllers.js')
+    script(src='/js/directives.js')
     script(src='/js/services.js')
 
     link(rel='stylesheet', href='/css/style.css')
   body
-    include ./partials/header
-    include ./partials/side-a
+    //-include ./partials/header
+    //-include ./partials/side-a
     .content
       block content
