--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,12 +13,12 @@ html(ng-app="CSApp")
     script(src='/js/routingConfig.js')
     //-script(src='/js/main.js')
     script(src='/js/app.js')
+    script(src='/js/services.js')
     script(src='/js/controllers.js')
     script(src='/js/directives.js')
-    script(src='/js/services.js')
 
     link(rel='stylesheet', href='/css/style.css')
-  body
+  body(data-ng-cloak)
     //-include ./partials/header
     //-include ./partials/side-a
     .content
