Added a route for search.

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,6 +10,9 @@ block content
           li(data-access-level='accessLevels.anon', active-nav)
             a(ui-sref="anon.register") Register
 
+          li(data-access-level='accessLevels.anon', active-nav)
+            a(ui-sref="anon.search") Search
+
           li(data-access-level='accessLevels.user', active-nav)
             a(ui-sref="user.home") Home
 
