Added weekdays to teacher search filter directive.

--- a/views/less/style.less
+++ b/views/less/style.less
@@ -46,3 +46,18 @@ a {
   .btn-primary;
   margin: 0 5px;
 }
+
+.searchFilters {
+  .weekdays {
+    background: #fff;
+    border: 1px solid #aaa;
+    .weekday {
+      display: inline-block;
+      margin-right: 1px;
+      padding: 5px 20px;
+    }
+    .active div{
+      background: #eee;
+    }
+  }
+}
