--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,6 +14,7 @@ html(ng-app="CSApp")
     //-script(src='/js/main.js')
     script(src='/js/app.js')
     script(src='/js/services.js')
+    script(src='/js/filters.js')
     script(src='/js/controllers.js')
     script(src='/js/directives.js')
 
