Changed hh1, mm1, hh2, mm2 for time slots in teachers to timeFrom and timeTo. Added filter for sex on the frontend.

--- a/views/templates/teacherSearchFilter.jade
+++ b/views/templates/teacherSearchFilter.jade
@@ -23,6 +23,7 @@ form.form-inline.searchFilters
   .sex.form-group
     label Sex
     select.form-control(data-ng-model="filterSex")
+      option(value="") --
       option(value="m") Male
       option(value="f") Female
   .age.form-group
