--- a/views/less/style.less
+++ b/views/less/style.less
@@ -48,6 +48,20 @@ a {
 }
 
 .searchFilters {
+  background: #fafafa;
+  padding: 20px;
+  .form-group {
+    padding: 20px;
+    label,
+    select,
+    input {
+      /*margin: 10px;*/
+      margin: 2px;
+    }
+    label {
+      display: block;
+    }
+  }
   .weekdays {
     background: #fff;
     border: 1px solid #aaa;
@@ -59,5 +73,10 @@ a {
     .active div{
       background: #eee;
     }
+  }
+}
+.results {
+  .teacher {
+    margin: 50px;
   }
 }
