--- a/views/templates/teacherSearchFilter.jade
+++ b/views/templates/teacherSearchFilter.jade
@@ -29,6 +29,10 @@ form.form-inline.searchFilters
   .age.form-group
     label Age
     select.form-control(data-ng-model="filterAge" ng-options="age as age|decade for age in ages")
+
+  .expertise.form-group
+    label Keywords
+    input(type="text" data-ng-model="keywords")
   //-.class
     .checkbox
       label(ng-repeat="(class,enabled) in filterClasses")
@@ -44,6 +48,9 @@ form.form-inline.searchFilters
     p Sex: {{teacher.sex | sex}}
     p Age: {{teacher.age}}
     p Info: {{teacher.info}}
+    p Expertise:
+    ul
+      li(ng-repeat="expertise in teacher.expertise") {{expertise}}
     p Availability:
     pre
       div(ng-repeat="availability in teacher.availability")
