--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,9 @@ html(ng-app="CSApp")
     script(src='/lib/angular-cookies.js')
     script(src='/lib/angular-ui-router.js')
 
+    script(src='/lib/ui-bootstrap.js')
+    script(src='/lib/ui-bootstrap-tpls.js')
+
     script(src='/lib/lodash.js')
     script(src='/lib/restangular.js')
 
