Filter by classes.

--- a/views/less/style.less
+++ b/views/less/style.less
@@ -74,6 +74,16 @@ a {
       background: #eee;
     }
   }
+  .class {
+    margin: 0 20px;
+    label {
+      padding: 5px;
+    }
+    input {
+      padding: 5px;
+      margin: 5px;
+    }
+  }
 }
 .results {
   .teacher {
